--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -3,26 +3,40 @@
 @tailwind utilities;
 
 body {
-    @apply bg-gray-100 dark:bg-gray-900 flex justify-center items-center min-h-screen m-0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  @apply bg-gray-100 dark:bg-gray-900 flex justify-center items-center
+    min-h-screen m-0;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
 
 #root {
-    @apply w-full bg-white dark:bg-black-bg shadow-lg;
+  @apply w-full bg-white dark:bg-black-bg shadow-lg;
 }
 
 nav ul {
-    @apply list-none p-0;
+  @apply list-none p-0;
 }
 
 nav ul li {
-    @apply inline mr-4;
+  @apply inline mr-4;
 }
 
 .toggle-button {
-    @apply w-14 h-8 flex items-center bg-gray-300 dark:bg-gray-700 rounded-full p-1 cursor-pointer transition-colors duration-300;
+  @apply w-14 h-8 flex items-center bg-gray-300 dark:bg-gray-700 rounded-full
+    p-1 cursor-pointer transition-colors duration-300;
 }
 
 .toggle-button .toggle-circle {
-    @apply bg-white w-6 h-6 rounded-full shadow-md transform transition-transform duration-300;
+  @apply bg-white w-6 h-6 rounded-full shadow-md transform transition-transform
+    duration-300;
 }
