--- a/react-app/src/output.css
+++ b/react-app/src/output.css
@@ -604,6 +604,10 @@ video {
   top: 0px;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -655,6 +659,42 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.max-h-\[calc\(100vh-200px\)\] {
+  max-height: calc(100vh - 200px);
+}
+
+.max-h-\[calc\(100vh-278px\)\] {
+  max-height: calc(100vh - 278px);
+}
+
+.max-h-\[calc\(100vh-16\)\] {
+  max-height: calc(100vh - 16);
+}
+
+.max-h-\[calc\(100vh-164\)\] {
+  max-height: calc(100vh - 164);
+}
+
+.max-h-\[calc\(100vh-164px\)\] {
+  max-height: calc(100vh - 164px);
+}
+
+.max-h-\[calc\(100vh-164px\)\/3\] {
+  max-height: calc(100vh - 164px)/3;
+}
+
+.max-h-\[\(calc\(100vh-164px\)\/3\)\] {
+  max-height: (calc(100vh - 164px) / 3);
+}
+
+.max-h-\[calc\(calc\(100vh-164px\)\/3\)\] {
+  max-height: calc(calc(100vh - 164px) / 3);
+}
+
+.max-h-full {
+  max-height: 100%;
 }
 
 .min-h-\[200px\] {
@@ -763,6 +803,10 @@ video {
   overflow-y: auto;
 }
 
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
 .overflow-x-scroll {
   overflow-x: scroll;
 }
@@ -791,9 +835,18 @@ video {
   border-top-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
 }
 
 .bg-blue-500 {
@@ -940,6 +993,14 @@ video {
   transition-duration: 150ms;
 }
 
+.transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -1048,6 +1109,11 @@ nav ul li {
 .hover\:text-red-700:hover {
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity, 1));
+}
+
+.dark\:border-gray-700:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
 }
 
 .dark\:bg-dark-bg:is(.dark *) {
